sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value debut
debut=0; fin=length-2;
^AlgCocktailSort2:6: error: not found: value fin
debut=0; fin=length-2;
         ^AlgCocktailSort2:10: error: not found: value debut
	for(i<-debut to fin){
               ^AlgCocktailSort2:17: error: not found: value fin
	for(i<-fin to debut by -1){
               ^